# folders

./: Compare.hs  Duplicates.hs  Find.hs  TODO  folders.cabal
src/: Find.hs
tools/: Compare.hs  Duplicates.hs
